--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "rxjs": "^7.8.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
