--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.1.0"
   }
 }
